# m365backup

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs  progress.rs
crates/cli/src/commands/: backup.rs  init.rs  mod.rs  restore.rs  snapshots.rs  tenant.rs  verify.rs
crates/core/: Cargo.toml
crates/core/src/: chunk.rs  crypto.rs  index.rs  lib.rs  pack.rs  repository.rs  snapshot.rs
crates/core/src/backend/: local.rs  mod.rs  s3.rs
crates/graph/: Cargo.toml
crates/graph/src/: auth.rs  client.rs  delta.rs  exchange.rs  lib.rs  onedrive.rs
