[workspace]
members = ["crates/core", "crates/graph", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/cvrt-gmbh/m365backup"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto
blake3 = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Storage
rust-s3 = { version = "0.35", features = ["tokio-rustls-tls"], default-features = false }
fastcdc = { version = "3", features = ["tokio"] }

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Graph API
graph-rs-sdk = "3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Bytes
bytes = "1"

# Futures
futures = "0.3"

# Dirs
dirs = "6"

[profile.release]
lto = true
strip = true
codegen-units = 1
