[package]
name = "m365backup-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage engine for m365backup — content-addressable, encrypted, deduplicated"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
rust-s3 = { workspace = true }
fastcdc = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
hex = "0.4"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
