[package]
name = "m365backup-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Microsoft Graph API client for m365backup"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
